# crispy-isp-detector

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  setup.sh
collector/: main.py  ping.py  speedtest_runner.py  supabase_client.py  traceroute.py
dashboard/: package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/ping/: route.ts
dashboard/app/api/speed/: route.ts
dashboard/app/components/: LocationFilter.tsx  PacketLossChart.tsx  PingChart.tsx  PingSectionClient.tsx  RegionFilter.tsx  SpeedChart.tsx  SpeedSectionClient.tsx  StatCard.tsx  TimeframeFilter.tsx  TopStatsClient.tsx
dashboard/lib/: data.ts  supabase.ts  timeframe.ts  types.ts
grafana/: dashboard.json
sql/: schema.sql
